# autopilot

./: README.md  pyproject.toml
src/: actor.py  history.py  kalman.py  main.py  ship.py  state_def.py  thruster.py
src/autopilot/: actor.py  controller.py  environment.py  graph_tools.py  kalman.py  main.py  sensor.py  ship.py  sim_tools.py  state_def.py  thruster.py
src/autopilot/scenarios/: capsule_earth_EDL.py  ideal_binary_control.py  intermediate_axis.py  sensing.py
